9.1.1: Bug fixes - Prevent extra shadow from being added to iOS textareas and inputs - Larger form touch targets on iOS - Fixed regression with dividers

--- a/css/core.css
+++ b/css/core.css
@@ -203,9 +203,13 @@ code {
 }
 .footnotes ol, .footnotes ol li p,
 figcaption,
-input, select, textarea, button,
 small {
     font-size: 0.833em;
+    margin-top: 0;
+    margin-bottom: 1.3em;
+}
+input, button, select, textarea {
+    font-size: 1em;
     margin-top: 0;
     margin-bottom: 1.3em;
 }
@@ -468,10 +472,9 @@ menu {
 /* ----- DIVIDERS ----- */
 
 hr {
-    margin: 3.9em -15vw;
+    margin: 3.9em 0;
     border: none;
-    max-width: 61rem;
-    width: 90vw;
+    width: 100%;
     height: 2px;
     display: block;
 }
@@ -518,8 +521,10 @@ input, button, textarea {
     -moz-box-sizing: border-box;
     box-sizing: border-box;
 }
+input, button, select, textarea {
+    padding: 0.75rem;
+}
 button {
-    height: 2rem;
     color: white;
     border: none;
     padding-left: 0.425rem;
@@ -531,13 +536,16 @@ button {
 input, textarea {
     width: 100%;
     border: 1px solid #C7C7C7;
-    padding: 0.375rem; /* Inner padding */
-
-
 }
 input[type='checkbox'] {
     width: 1rem;
     display: inline-block;
+}
+/* Override iOS textbox shadow */
+input[type=text] {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
 }
 input, textarea, button {
     /* css 3 */
@@ -1276,6 +1284,9 @@ Font size: 19px, ~Margin&Padding: 28.5px
     menu ul {
         line-height: 1.8em; /* 1.2 header line height * 1.5 */
     }
+    input, button, select, textarea {
+        font-size: 0.833em;
+    }
 
     /* NAVBAR ------------------------------------- */
     
@@ -1340,11 +1351,6 @@ Font size: 19px, ~Margin&Padding: 28.5px
 
 
     /* --- DIVIDERS --- */
-    hr {
-        margin-left: -5vw;
-        margin-right: -5vw;
-        max-width: 45rem;
-    }
     article hr,
     footer hr,
     hr.small {
@@ -1353,6 +1359,9 @@ Font size: 19px, ~Margin&Padding: 28.5px
 
 
     /* --- FORMS & BUTTONS --- */
+    input, button, select, textarea {
+        padding: 0.375rem;
+    }
     .bigfoot-footnote__button {
         font-size: 18px;
     }
@@ -1510,13 +1519,6 @@ Font size: 21px, ~Margin&Padding: 31.5px
 
 
     /* --- DIVIDERS --- */
-    hr {
-        margin-left: -24vw;
-        margin-right: -24vw;
-        width: 82vw;
-        max-width: 55rem;
-        min-width: 39rem;
-    }
     article hr,
     footer hr,
     hr.small {
